<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mazaiting.site.module.login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                >

                <View
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    android:visibility="invisible"
                    />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="应用图标"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_launcher"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:visibility="invisible"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintTextAppearance="@style/hintAppearance"
                    >

                    <EditText
                        android:id="@id/login_et_username"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginStart="6dp"
                        android:background="@null"
                        android:hint="@string/login_et_username"
                        android:inputType="textEmailAddress|text"
                        android:textSize="16sp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/login_et_username"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/horizontal_line"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintTextAppearance="@style/hintAppearance"
                    >

                    <EditText
                        android:id="@id/login_et_password"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginStart="6dp"
                        android:background="@null"
                        android:hint="@string/login_et_password"
                        android:inputType="textPassword"
                        android:textSize="16sp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/login_et_password"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/horizontal_line"
                        />
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:visibility="invisible"
                    />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    >

                    <CheckBox
                        android:id="@id/login_cb_auto_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/login_auto_login"
                        android:textColor="#FF212121"
                        android:textSize="@dimen/sp_14"
                        />

                    <CheckBox
                        android:id="@id/login_cb_depart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/login_department"
                        android:textColor="#FF212121"
                        android:textSize="@dimen/sp_14"
                        />

                </RelativeLayout>

                <Button
                    android:id="@id/login_btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/login_btn_bg"
                    android:text="@string/login_btn_login"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
